force-app/main/default/objects/Redemption_Code__c/Redemption_Code__c.object-meta.xml
<CustomObject>
    <description>Stores redemption codes for digital books/products, including validity and usage tracking.</description>
    <label>Redemption Code</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemption Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>