force-app/main/default/objects/Redemption_Code__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The actual redemption code token to be issued/redeemed.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique redemption token string. Use this to redeem a digital product.</inlineHelpText>
    <label>Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>