force-app/main/default/objects/Redemption_Code__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the code is active and can be redeemed.</description>
    <inlineHelpText>Uncheck to disable without changing status.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>