force-app/main/default/objects/Redemption_Code__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <description>Type of license granted by the code.</description>
    <inlineHelpText>Defines usage rules for the code.</inlineHelpText>
    <label>License Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single-Use</fullName>
                <default>true</default>
                <label>Single-Use</label>
            </value>
            <value>
                <fullName>Multi-Use</fullName>
            </value>
            <value>
                <fullName>Time-Bound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>