force-app/main/default/objects/Redemption_Code__c/fields/Max_Redemptions__c.field-meta.xml
<CustomField>
    <fullName>Max_Redemptions__c</fullName>
    <description>Maximum allowed redemptions for multi-use codes.</description>
    <inlineHelpText>Leave blank for Single-Use or unlimited. Applies to Multi-Use only.</inlineHelpText>
    <label>Max Redemptions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>