force-app/main/default/objects/Redemption_Code__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes about the code.</description>
    <inlineHelpText>Optional details, terms, or troubleshooting notes.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>