force-app/main/default/objects/Redemption_Code__c/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <description>Source system or order identifier where the code was generated.</description>
    <inlineHelpText>e.g., Order number, campaign, or system name.</inlineHelpText>
    <label>Order/Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>