force-app/main/default/objects/Redemption_Code__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Name of the digital book or product associated with this code.</description>
    <inlineHelpText>Human-friendly product/book title.</inlineHelpText>
    <label>Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>