force-app/main/default/objects/Redemption_Code__c/fields/Redeemed_By__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact who redeemed the code.</description>
    <inlineHelpText>Links the redemption to a Contact.</inlineHelpText>
    <label>Redeemed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Redemption Codes</relationshipLabel>
    <relationshipName>Redemption_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>