force-app/main/default/objects/Redemption_Code__c/fields/Redeemed_Date__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_Date__c</fullName>
    <description>Date/time when the code was redeemed.</description>
    <inlineHelpText>Populated when status becomes Redeemed.</inlineHelpText>
    <label>Redeemed Date</label>
    <type>DateTime</type>
</CustomField>