force-app/main/default/objects/Redemption_Code__c/fields/Redemption_Count__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many times the code has been redeemed so far.</description>
    <inlineHelpText>Increment when the code is redeemed.</inlineHelpText>
    <label>Redemption Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>