force-app/main/default/objects/Redemption_Code__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>Product SKU or internal identifier.</description>
    <inlineHelpText>Optional SKU or internal product code.</inlineHelpText>
    <label>SKU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>