force-app/main/default/objects/Redemption_Code__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status of the redemption code.</description>
    <inlineHelpText>Current state of the code.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Redeemed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>