force-app/main/default/objects/Redemption_Code__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <description>Start date from which the code becomes valid.</description>
    <inlineHelpText>Code cannot be redeemed before this date.</inlineHelpText>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>