force-app/main/default/objects/Redemption_Code__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until__c</fullName>
    <description>End date after which the code expires.</description>
    <inlineHelpText>Code cannot be redeemed after this date.</inlineHelpText>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>