force-app/main/default/objects/Redemption_Code__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Is_Active__c</columns>
    <columns>License_Type__c</columns>
    <columns>Max_Redemptions__c</columns>
    <columns>Notes__c</columns>
    <columns>Order_Source__c</columns>
    <columns>Product__c</columns>
    <columns>Redeemed_By__c</columns>
    <columns>Redeemed_Date__c</columns>
    <columns>Redemption_Count__c</columns>
    <columns>SKU__c</columns>
    <columns>Status__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_Until__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>